Suppress hotkey prompt when showing transient Zoom dialog.

Since the Zoom dialog disappears after a moment, instructing screen
reader users to press ALT-SHIFT-A to refocus it is misleading, since it
will likely be gone by the time they input the hotkey.

There are other accessible ways to access the screen zoom, so this is
not a problem.

Bug: 920005
Change-Id: I42076474ade89c46eef68e1f6b30eb274c5efc82
Reviewed-on: https://chromium-review.googlesource.com/c/1401841
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Dana Fried <dfried@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621000}
Former-commit-id: 3334f0abc56e80bad442ecbce42a341f1a6ef25e